test: TestNumberGenerator 구현체 deque로 변경